# judoassistant

./: .appveyor.yml  .drone.yml  .gitignore  .gitmodules  .ignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  alembic.ini  meson.build  meson_options.txt  package_windows.py
src/: core.hpp  exception.hpp  hash.hpp  id.cpp  id.hpp  log.cpp  log.hpp  meson.build  position_manager.cpp  position_manager.hpp  qutejudo.cpp  random.cpp  random.hpp  serializables.hpp  serialize.hpp  version.cpp  version.hpp.in
src/actions/: CMakeLists.txt  action.cpp  action.hpp  actions.hpp  category_actions.cpp  category_actions.hpp  change_tournament_name_action.cpp  change_tournament_name_action.hpp  composite_action.cpp  composite_action.hpp  create_match_action.cpp  create_match_action.hpp  create_match_event_action.cpp  create_match_event_action.hpp  create_player_action.cpp  create_player_action.hpp  match_actions.cpp  match_actions.hpp  match_event_actions.cpp  match_event_actions.hpp  meson.build  player_actions.cpp  player_actions.hpp  tatami_actions.cpp  tatami_actions.hpp  tournament_actions.cpp  tournament_actions.hpp
src/applications/: CMakeLists.txt  hub_application.cpp  hub_application.hpp  meson.build  qutejudo_application.cpp  qutejudo_application.hpp  score_application.cpp  score_application.hpp  web_application.cpp
src/config/: homepage.hpp  network.hpp  web.hpp  web_server.hpp
src/core/: core.hpp  core.hpp.in  exception.hpp  id.cpp  id.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  meson.build  position_manager.cpp  position_manager.hpp  random.cpp  serializables.hpp  serialize.hpp  shuffle.hpp  version.cpp  version.hpp.in
src/core/actions/: action.cpp  action.hpp  actions.hpp  add_category_action.cpp  add_category_action.hpp  add_category_with_players_action.cpp  add_category_with_players_action.hpp  add_draw_system_preference_row.cpp  add_draw_system_preference_row.hpp  add_match_action.cpp  add_match_action.hpp  add_players_action.cpp  add_players_action.hpp  add_players_to_category_action.cpp  add_players_to_category_action.hpp  add_players_with_categories_action.cpp  add_players_with_categories_action.hpp  auto_add_categories_action.cpp  auto_add_categories_action.hpp  award_hansoku_make_action.cpp  award_hansoku_make_action.hpp  award_ippon_action.cpp  award_ippon_action.hpp  award_shido_action.cpp  award_shido_action.hpp  award_wazari_action.cpp  award_wazari_action.hpp  cancel_hansoku_make_action.cpp  cancel_hansoku_make_action.hpp  cancel_ippon_action.cpp  cancel_ippon_action.hpp  cancel_shido_action.cpp  cancel_shido_action.hpp  cancel_wazari_action.cpp  cancel_wazari_action.hpp  (+90 more)
src/draw_strategies/: CMakeLists.txt  draw_strategies.hpp  draw_strategy.hpp  meson.build  pool_draw_strategy.cpp  pool_draw_strategy.hpp  round_robin_draw_strategy.cpp  round_robin_draw_strategy.hpp
src/draw_systems/: draw_system.hpp  draw_systems.cpp  draw_systems.hpp  knockout_draw_system.cpp  knockout_draw_system.hpp  meson.build  pool_draw_system.cpp  pool_draw_system.hpp
src/network/: meson.build  network_client.cpp  network_client.hpp  network_connection.hpp  network_interface.hpp  network_message.cpp  network_message.hpp  network_participant.cpp  network_server.cpp  network_server.hpp
src/rulesets/: CMakeLists.txt  meson.build  ruleset.cpp  ruleset.hpp  rulesets.cpp  rulesets.hpp  twenty_eighteen_children_ruleset.cpp  twenty_eighteen_children_ruleset.hpp  twenty_eighteen_ruleset.cpp  twenty_eighteen_ruleset.hpp  twenty_eighteen_veteran_ruleset.cpp  twenty_eighteen_veteran_ruleset.hpp  twentyeighteen_ruleset.cpp  twentyeighteen_ruleset.hpp
src/store_handlers/: master_store_handler.cpp  master_store_handler.hpp  meson.build  network_connection.hpp  network_message.cpp  network_message.hpp  network_server.cpp  network_server.hpp  qstore_handler.hpp  store_handler.hpp
src/store_managers/: client_store_manager.cpp  client_store_manager.hpp  master_store_manager.cpp  master_store_manager.hpp  meson.build  store_manager.cpp  store_manager.hpp  sync_payload.cpp  sync_payload.hpp
src/stores/: CMakeLists.txt  category_store.cpp  category_store.hpp  match_event.cpp  match_event.hpp  match_store.cpp  match_store.hpp  meson.build  player.cpp  player.hpp  player_list.cpp  player_list.hpp  player_list_store.cpp  player_list_store.hpp  player_store.cpp  player_store.hpp  qtournament_store.cpp  qtournament_store.hpp  tatami_store.cpp  tatami_store.hpp  tournament_store.cpp  tournament_store.hpp
src/ui/: meson.build
src/web/: config.hpp  database.cpp  database.hpp  error.cpp  error.hpp  json_encoder.cpp  json_encoder.hpp  loaded_tournament.cpp  loaded_tournament.hpp  meson.build  new_web_server.cpp  new_web_server.hpp  tcp_participant.cpp  tcp_participant.hpp  url_status.hpp  web_client.cpp  web_client.hpp  web_client_worker.hpp  web_name_manager.cpp  web_name_manager.hpp  web_name_status.hpp  web_participant.cpp  web_participant.hpp  web_server.cpp  web_server.hpp  web_server_database_worker.cpp  web_server_database_worker.hpp  web_server_worker.cpp  web_server_worker.hpp  web_tatami_model.cpp  web_tatami_model.hpp  web_tournament_store.cpp  web_tournament_store.hpp  web_types.hpp
src/widgets/: CMakeLists.txt  auto_add_category_dialog.cpp  auto_add_category_dialog.hpp  categories_widget.cpp  categories_widget.hpp  client_window.cpp  client_window.hpp  colors.hpp  connect_dialog.cpp  connect_dialog.hpp  create_category_dialog.cpp  create_category_dialog.hpp  create_player_dialog.cpp  create_player_dialog.hpp  edit_category_players_widget.cpp  edit_category_players_widget.hpp  edit_category_widget.cpp  edit_category_widget.hpp  edit_player_widget.cpp  edit_player_widget.hpp  fixed_scroll_area.cpp  fixed_scroll_area.hpp  hub_window.cpp  hub_window.hpp  import_players_csv_dialog.cpp  import_players_csv_dialog.hpp  login_dialog.cpp  login_dialog.hpp  match_card_widget.cpp  match_card_widget.hpp  matches_widget.cpp  matches_widget.hpp  meson.build  players_widget.cpp  players_widget.hpp  qutejudo.cpp  qutejudo.hpp  qutejudo_widget.cpp  qutejudo_widget.hpp  qutejudo_window.cpp  (+17 more)
(+389 files in other folders)
