subdir('actions')
subdir('applications')
subdir('draw_systems')
subdir('network')
subdir('rulesets')
subdir('stores')
subdir('store_managers')
subdir('widgets')

core_sources += ['src/id.cpp']
core_sources += ['src/log.cpp']
core_sources += ['src/random.cpp']
core_sources += ['src/version.cpp']
core_sources += ['src/position_manager.cpp']
