sources += ['src/actions/action.cpp']
sources += ['src/actions/player_actions.cpp']
sources += ['src/actions/match_actions.cpp']
sources += ['src/actions/match_event_actions.cpp']
sources += ['src/actions/composite_action.cpp']
sources += ['src/actions/tournament_actions.cpp']
sources += ['src/actions/category_actions.cpp']

