core_sources += ['src/actions/action.cpp']
core_sources += ['src/actions/player_actions.cpp']
core_sources += ['src/actions/match_actions.cpp']
core_sources += ['src/actions/match_event_actions.cpp']
core_sources += ['src/actions/composite_action.cpp']
core_sources += ['src/actions/tatami_actions.cpp']
core_sources += ['src/actions/tournament_actions.cpp']
core_sources += ['src/actions/category_actions.cpp']

