core_sources += ['src/network/network_message.cpp']
hub_sources += ['src/network/network_server.cpp']
ui_sources += ['src/network/network_client.cpp']

ui_moc_headers+= ['src/network/network_interface.hpp']
hub_moc_headers+= ['src/network/network_server.hpp']
ui_moc_headers+= ['src/network/network_client.hpp']

