sources += ['src/store_handlers/master_store_handler.cpp']
sources += ['src/store_handlers/network_message.cpp']
sources += ['src/store_handlers/network_server.cpp']

moc_headers+= ['src/store_handlers/master_store_handler.hpp']
moc_headers+= ['src/store_handlers/network_server.hpp']
moc_headers+= ['src/store_handlers/qstore_handler.hpp']

