ui_sources += ['src/store_managers/store_manager.cpp']

hub_moc_headers+= ['src/store_managers/master_store_manager.hpp']
ui_moc_headers+= ['src/store_managers/client_store_manager.hpp']
ui_moc_headers+= ['src/store_managers/store_manager.hpp']

hub_sources += ['src/store_managers/master_store_manager.cpp']
ui_sources += ['src/store_managers/client_store_manager.cpp']
ui_sources += ['src/store_managers/sync_payload.cpp']

