subdir('tatami')

core_sources += ['src/stores/category_store.cpp']
core_sources += ['src/stores/match_store.cpp']
core_sources += ['src/stores/player_store.cpp']
core_sources += ['src/stores/tournament_store.cpp']
ui_sources += ['src/stores/qtournament_store.cpp']

ui_moc_headers += ['src/stores/qtournament_store.hpp']

