subdir('misc')
subdir('models')
subdir('validators')

sources += ['src/widgets/categories_widget.cpp']
sources += ['src/widgets/matches_widget.cpp']
sources += ['src/widgets/players_widget.cpp']
sources += ['src/widgets/qutejudo_window.cpp']
sources += ['src/widgets/tatamis_widget.cpp']
sources += ['src/widgets/tournament_widget.cpp']
sources += ['src/widgets/create_player_dialog.cpp']
sources += ['src/widgets/edit_player_widget.cpp']
sources += ['src/widgets/create_category_dialog.cpp']
sources += ['src/widgets/unallocated_blocks_widget.cpp']
sources += ['src/widgets/tatami_widget.cpp']

moc_headers += ['src/widgets/categories_widget.hpp']
moc_headers += ['src/widgets/matches_widget.hpp']
moc_headers += ['src/widgets/players_widget.hpp']
moc_headers += ['src/widgets/qutejudo_window.hpp']
moc_headers += ['src/widgets/tatamis_widget.hpp']
moc_headers += ['src/widgets/tournament_widget.hpp']
moc_headers += ['src/widgets/create_player_dialog.hpp']
moc_headers += ['src/widgets/edit_player_widget.hpp']
moc_headers += ['src/widgets/create_category_dialog.hpp']
moc_headers += ['src/widgets/tatami_widget.hpp']
moc_headers += ['src/widgets/unallocated_blocks_widget.hpp']

