subdir('import_helpers')
subdir('misc')
subdir('models')
subdir('validators')

hub_sources += ['src/widgets/auto_add_category_dialog.cpp']
hub_sources += ['src/widgets/categories_widget.cpp']
hub_sources += ['src/widgets/matches_widget.cpp']
hub_sources += ['src/widgets/players_widget.cpp']
hub_sources += ['src/widgets/hub_window.cpp']
hub_sources += ['src/widgets/tatamis_widget.cpp']
hub_sources += ['src/widgets/tournament_widget.cpp']
hub_sources += ['src/widgets/create_player_dialog.cpp']
hub_sources += ['src/widgets/edit_player_widget.cpp']
hub_sources += ['src/widgets/edit_category_widget.cpp']
hub_sources += ['src/widgets/edit_category_players_widget.cpp']
hub_sources += ['src/widgets/create_category_dialog.cpp']
hub_sources += ['src/widgets/unallocated_blocks_widget.cpp']
hub_sources += ['src/widgets/tatami_widget.cpp']
hub_sources += ['src/widgets/import_players_csv_dialog.cpp']

hub_moc_headers += ['src/widgets/auto_add_category_dialog.hpp']
hub_moc_headers += ['src/widgets/categories_widget.hpp']
hub_moc_headers += ['src/widgets/matches_widget.hpp']
hub_moc_headers += ['src/widgets/players_widget.hpp']
hub_moc_headers += ['src/widgets/hub_window.hpp']
hub_moc_headers += ['src/widgets/tatamis_widget.hpp']
hub_moc_headers += ['src/widgets/tournament_widget.hpp']
hub_moc_headers += ['src/widgets/create_player_dialog.hpp']
hub_moc_headers += ['src/widgets/edit_player_widget.hpp']
hub_moc_headers += ['src/widgets/edit_category_widget.hpp']
hub_moc_headers += ['src/widgets/edit_category_players_widget.hpp']
hub_moc_headers += ['src/widgets/create_category_dialog.hpp']
hub_moc_headers += ['src/widgets/tatami_widget.hpp']
hub_moc_headers += ['src/widgets/unallocated_blocks_widget.hpp']
hub_moc_headers += ['src/widgets/import_players_csv_dialog.hpp']

score_sources += ['src/widgets/score_operator_window.cpp']

score_moc_headers += ['src/widgets/score_operator_window.hpp']

