core_sources += ['src/core/actions/action.cpp']
core_sources += ['src/core/actions/player_actions.cpp']
core_sources += ['src/core/actions/match_actions.cpp']
core_sources += ['src/core/actions/tatami_actions.cpp']
core_sources += ['src/core/actions/change_tournament_name_action.cpp']
core_sources += ['src/core/actions/change_tournament_web_name_action.cpp']
core_sources += ['src/core/actions/category_actions.cpp']

