core_sources += ['src/core/actions/action.cpp']

core_sources += ['src/core/actions/add_category_action.cpp']
core_sources += ['src/core/actions/add_category_with_players_action.cpp']
core_sources += ['src/core/actions/add_draw_system_preference_row.cpp']
core_sources += ['src/core/actions/add_match_action.cpp']
core_sources += ['src/core/actions/add_players_action.cpp']
core_sources += ['src/core/actions/add_players_to_category_action.cpp']
core_sources += ['src/core/actions/auto_add_categories_action.cpp']
core_sources += ['src/core/actions/award_hansoku_make_action.cpp']
core_sources += ['src/core/actions/award_ippon_action.cpp']
core_sources += ['src/core/actions/award_shido_action.cpp']
core_sources += ['src/core/actions/award_wazari_action.cpp']
core_sources += ['src/core/actions/cancel_hansoku_make_action.cpp']
core_sources += ['src/core/actions/cancel_ippon_action.cpp']
core_sources += ['src/core/actions/cancel_shido_action.cpp']
core_sources += ['src/core/actions/cancel_wazari_action.cpp']
core_sources += ['src/core/actions/change_categories_draw_system_action.cpp']
core_sources += ['src/core/actions/change_categories_name_action.cpp']
core_sources += ['src/core/actions/change_categories_ruleset_action.cpp']
core_sources += ['src/core/actions/change_categories_ruleset_action.cpp']
core_sources += ['src/core/actions/change_draw_system_preference_identifier_action.cpp']
core_sources += ['src/core/actions/change_draw_system_preference_limit_action.cpp']
core_sources += ['src/core/actions/change_match_card_style_preference_action.cpp']
core_sources += ['src/core/actions/change_players_age_action.cpp']
core_sources += ['src/core/actions/change_players_club_action.cpp']
core_sources += ['src/core/actions/change_players_country_action.cpp']
core_sources += ['src/core/actions/change_players_first_name_action.cpp']
core_sources += ['src/core/actions/change_players_last_name_action.cpp']
core_sources += ['src/core/actions/change_players_rank_action.cpp']
core_sources += ['src/core/actions/change_players_sex_action.cpp']
core_sources += ['src/core/actions/change_players_weight_action.cpp']
core_sources += ['src/core/actions/change_scoreboard_style_preference_action.cpp']
core_sources += ['src/core/actions/change_tournament_date_action.cpp']
core_sources += ['src/core/actions/change_tournament_location_action.cpp']
core_sources += ['src/core/actions/change_tournament_name_action.cpp']
core_sources += ['src/core/actions/change_tournament_web_name_action.cpp']
core_sources += ['src/core/actions/draw_categories_action.cpp']
core_sources += ['src/core/actions/erase_categories_action.cpp']
core_sources += ['src/core/actions/erase_draw_system_preference_row.cpp']
core_sources += ['src/core/actions/erase_players_action.cpp']
core_sources += ['src/core/actions/erase_players_from_all_categories_action.cpp']
core_sources += ['src/core/actions/erase_players_from_category_action.cpp']
core_sources += ['src/core/actions/match_event_action.cpp']
core_sources += ['src/core/actions/pause_match_action.cpp']
core_sources += ['src/core/actions/reset_matches_action.cpp']
core_sources += ['src/core/actions/resume_match_action.cpp']
core_sources += ['src/core/actions/set_categories_draw_disabled.cpp']
core_sources += ['src/core/actions/set_match_bye_action.cpp']
core_sources += ['src/core/actions/set_match_player_action.cpp']
core_sources += ['src/core/actions/set_tatami_count_action.cpp']
core_sources += ['src/core/actions/set_tatami_location_action.cpp']
core_sources += ['src/core/actions/start_osaekomi_action.cpp']
core_sources += ['src/core/actions/stop_osaekomi_action.cpp']

