core_sources += ['src/core/draw_systems/best_of_three_draw_system.cpp']
core_sources += ['src/core/draw_systems/double_pool_draw_system.cpp']
core_sources += ['src/core/draw_systems/draw_systems.cpp']
core_sources += ['src/core/draw_systems/knockout_draw_system.cpp']
core_sources += ['src/core/draw_systems/pool_draw_system.cpp']

