subdir('tatami')

core_sources += ['src/core/stores/category_store.cpp']
core_sources += ['src/core/stores/match_store.cpp']
core_sources += ['src/core/stores/player_age.cpp']
core_sources += ['src/core/stores/player_country.cpp']
core_sources += ['src/core/stores/player_rank.cpp']
core_sources += ['src/core/stores/player_sex.cpp']
core_sources += ['src/core/stores/player_store.cpp']
core_sources += ['src/core/stores/player_weight.cpp']
core_sources += ['src/core/stores/preferences_store.cpp']
core_sources += ['src/core/stores/tournament_store.cpp']

