hub_sources += ['src/ui/network/network_server.cpp']
hub_sources += ['src/ui/network/network_participant.cpp']
hub_moc_headers+= ['src/ui/network/network_server.hpp']

ui_sources += ['src/ui/network/network_client.cpp']
ui_sources += ['src/ui/network/network_interface.cpp']
ui_moc_headers+= ['src/ui/network/network_interface.hpp']
ui_moc_headers+= ['src/ui/network/network_client.hpp']
