ui_sources += ['src/ui/store_managers/store_manager.cpp']

hub_moc_headers+= ['src/ui/store_managers/master_store_manager.hpp']
ui_moc_headers+= ['src/ui/store_managers/client_store_manager.hpp']
ui_moc_headers+= ['src/ui/store_managers/store_manager.hpp']

hub_sources += ['src/ui/store_managers/master_store_manager.cpp']
ui_sources += ['src/ui/store_managers/client_store_manager.cpp']
ui_sources += ['src/ui/store_managers/sync_payload.cpp']

