ui_sources += ['src/ui/stores/qplayer_age.cpp']
ui_sources += ['src/ui/stores/qplayer_country.cpp']
ui_sources += ['src/ui/stores/qplayer_rank.cpp']
ui_sources += ['src/ui/stores/qplayer_sex.cpp']
ui_sources += ['src/ui/stores/qplayer_weight.cpp']
ui_sources += ['src/ui/stores/qtournament_store.cpp']

ui_moc_headers += ['src/ui/stores/qplayer_age.hpp']
ui_moc_headers += ['src/ui/stores/qplayer_country.hpp']
ui_moc_headers += ['src/ui/stores/qplayer_rank.hpp']
ui_moc_headers += ['src/ui/stores/qplayer_sex.hpp']
ui_moc_headers += ['src/ui/stores/qplayer_weight.hpp']
ui_moc_headers += ['src/ui/stores/qtournament_store.hpp']

