subdir('graphics_items')

hub_sources += ['src/ui/widgets/auto_add_category_dialog.cpp']
hub_sources += ['src/ui/widgets/categories_widget.cpp']
hub_sources += ['src/ui/widgets/configure_dialog.cpp']
hub_sources += ['src/ui/widgets/create_category_dialog.cpp']
hub_sources += ['src/ui/widgets/create_player_dialog.cpp']
hub_sources += ['src/ui/widgets/edit_category_players_widget.cpp']
hub_sources += ['src/ui/widgets/edit_category_widget.cpp']
hub_sources += ['src/ui/widgets/edit_player_widget.cpp']
hub_sources += ['src/ui/widgets/hub_window.cpp']
hub_sources += ['src/ui/widgets/import_players_csv_dialog.cpp']
hub_sources += ['src/ui/widgets/login_dialog.cpp']
hub_sources += ['src/ui/widgets/matches_widget.cpp']
hub_sources += ['src/ui/widgets/tatamis_widget.cpp']
hub_sources += ['src/ui/widgets/players_widget.cpp']
hub_sources += ['src/ui/widgets/tournament_widget.cpp']
hub_sources += ['src/ui/widgets/unallocated_blocks_widget.cpp']
hub_sources += ['src/ui/widgets/web_client_widget.cpp']

hub_moc_headers += ['src/ui/widgets/auto_add_category_dialog.hpp']
hub_moc_headers += ['src/ui/widgets/categories_widget.hpp']
hub_moc_headers += ['src/ui/widgets/configure_dialog.hpp']
hub_moc_headers += ['src/ui/widgets/create_category_dialog.hpp']
hub_moc_headers += ['src/ui/widgets/create_player_dialog.hpp']
hub_moc_headers += ['src/ui/widgets/edit_category_players_widget.hpp']
hub_moc_headers += ['src/ui/widgets/edit_category_widget.hpp']
hub_moc_headers += ['src/ui/widgets/edit_player_widget.hpp']
hub_moc_headers += ['src/ui/widgets/hub_window.hpp']
hub_moc_headers += ['src/ui/widgets/import_players_csv_dialog.hpp']
hub_moc_headers += ['src/ui/widgets/login_dialog.hpp']
hub_moc_headers += ['src/ui/widgets/matches_widget.hpp']
hub_moc_headers += ['src/ui/widgets/tatamis_widget.hpp']
hub_moc_headers += ['src/ui/widgets/players_widget.hpp']
hub_moc_headers += ['src/ui/widgets/tournament_widget.hpp']
hub_moc_headers += ['src/ui/widgets/unallocated_blocks_widget.hpp']
hub_moc_headers += ['src/ui/widgets/web_client_widget.hpp']

score_sources += ['src/ui/widgets/match_card_widget.cpp']
score_sources += ['src/ui/widgets/score_display_widget.cpp']
score_sources += ['src/ui/widgets/score_display_window.cpp']
score_sources += ['src/ui/widgets/score_operator_window.cpp']

score_moc_headers += ['src/ui/widgets/match_card_widget.hpp']
score_moc_headers += ['src/ui/widgets/score_display_widget.hpp']
score_moc_headers += ['src/ui/widgets/score_display_window.hpp']
score_moc_headers += ['src/ui/widgets/score_operator_window.hpp']

ui_sources += ['src/ui/widgets/client_window.cpp']
ui_sources += ['src/ui/widgets/connect_dialog.cpp']
ui_sources += ['src/ui/widgets/fixed_scroll_area.cpp']

ui_moc_headers += ['src/ui/widgets/client_window.hpp']
ui_moc_headers += ['src/ui/widgets/connect_dialog.hpp']
ui_moc_headers += ['src/ui/widgets/fixed_scroll_area.hpp']

